Now displays n inital routes, but moved away from linked lists to arrayList<Node> for easier displaying